[package]
name = "advent2020"
version = "0.1.0"
authors = ["Heath Kehoe <yaheath@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
lazy_static = "*"
#linked-list = "0"
itertools = "*"
ya_advent_lib = "1.4.0"
ahash = "0.8.2"
peg = "0.8.1"
